--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka/
+eureka.client.serviceUrl.defaultZone=http://26.168.117.113:8081/eureka/
 spring.application.name=gateway
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
